--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ssbanerjee.passwordmanager">
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,9 +18,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ssbanerjee.passwordmanager.HomeActivity"
+            android:name=".HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".PasswordListActivity" />
+        <activity android:name=".AddPassword" />
+        <activity android:name=".ChangePassword"></activity>
     </application>
 
 </manifest>
